KPMP-582 updated header logo, fixed NavUser z-indexing, font size on filter instructions

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,22 +19,12 @@ body {
 	background: $footer-color;
 }
 
-.ant-select {
-	width: 100%;
-}
-
 a {
 	cursor: pointer;
 }
 
-.logo {
+.ant-select {
 	width: 100%;
-	height: 100%;
-}
-
-.header {
-	font-size: 18px;
-	font-weight: 600;	
 }
 
 #dynamicUploadForm {
@@ -112,10 +102,16 @@ PACKAGES
 
 		/* xs to sm */
 		height: $packages-filter-controls-sm-height;
+		i {
+			font-size: x-small;
+		}
 
 		/* md and up */
 		@media (min-width: 768px) {
 			height: $packages-filter-controls-md-height;
+			i {
+				font-size: small;
+			}
 		}
 
 		.filter {
@@ -174,9 +170,10 @@ PACKAGES
     background-color: white;
 	border-bottom: 1px solid #e7e7e7;
 
-    .navbar-header {
-    	width: 220px;
-    }
+	.navbar-brand img.logo {
+		width: 80px;
+		min-width: 80px;
+	}
 }
 
 .fixed-top-subnav {
